@@ -22,22 +22,29 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.acumos.license-manager</groupId>
 	<artifactId>license-manager-client-library</artifactId>
-	<version>0.0.14-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>License Manager Client Library</name>
-	<description>The Client library assists in fetching license profile templates, validating license profile and verifying that the user has the rights to use commercial models. Developed by EST.tech.</description>
+	<description>The License Manager Client library assists in fetching license profile templates, validating license profile and verifying that the user has the rights to use models. Developed by EST.tech.</description>
 	<properties>
+		<old.version>0.0.14</old.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>		<!-- Stand-alone RESTFul application -->		<!-- Jenkins invokes mvn with argument -Dbuild.number=${BUILD_NUMBER} -->
+		<java.version>11</java.version>		<!-- Stand-alone RESTFul application -->		<!-- Jenkins invokes mvn with argument -Dbuild.number=${BUILD_NUMBER} -->
 		<build.number>0</build.number>
 		<skipTests>false</skipTests>		<!-- Supplied by Jenkins -->
 		<maven.build.timestamp.format>yyyy.MM.dd_HH.mm</maven.build.timestamp.format>
+		<jacoco.version>0.8.4</jacoco.version>
 	</properties>	<!-- Some dependencies are specific to Acumos, but this POM defines no repositories 
 		section. The Jenkins server specifies Acumos repositories. Developers should 
 		ensure their ~/.m2/settings.xml file has the following URLs in both the repositories 
 		and pluginRepositories sections or in a profile: https://nexus.acumos.org/content/repositories/snapshots/ 
 		https://nexus.acumos.org/content/repositories/releases/ -->
 	<dependencies>
+		<dependency>
+			<groupId>org.acumos.license-usage-manager</groupId>
+			<artifactId>lum-java-rest-client</artifactId>
+			<version>0.25.2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.acumos.common-dataservice</groupId>
 			<artifactId>cmn-data-svc-client</artifactId>
@@ -56,6 +63,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>io.specto</groupId>
+			<artifactId>hoverfly-java</artifactId>
+			<version>0.12.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.google.collections</groupId>
 			<artifactId>google-collections</artifactId>
 			<version>1.0-rc2</version>
@@ -63,7 +76,7 @@
 		<dependency>
 			<groupId>com.networknt</groupId>
 			<artifactId>json-schema-validator</artifactId>
-			<version>1.0.4</version>
+			<version>1.0.20</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -81,26 +94,54 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<release>11</release>
+					<release>${java.version}</release>
+					<forceJavacCompilerUse>true</forceJavacCompilerUse>
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
-				<configuration>
-					<argLine> --illegal-access=permit
-					</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.22.0</version>
-				<configuration>
-					<argLine> --illegal-access=permit
-					</argLine>
-				</configuration>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<id>coverage-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>coverage-report</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<!-- Threshold -->
+					<execution>
+						<id>coverage-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>CLASS</element>
+										<excludes>
+											<exclude>org.acumos.licensemanager.exceptions.RightToUseException</exclude>
+											<exclude>org.acumos.licensemanager.exceptions.LicenseAssetRegistrationException</exclude>
+										</excludes>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>40%</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -175,26 +216,7 @@
 					</includes>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.9</version>
-				<executions>
-					<execution>
-						<id>default-prepare-agent</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>default-report</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+
 			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.2</version>
@@ -230,6 +252,17 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.7.1</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>3.0.0</version>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -239,6 +272,36 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
 				<version>2.3</version>
+			</plugin>
+			<plugin>
+				<groupId>com.github.siom79.japicmp</groupId>
+				<artifactId>japicmp-maven-plugin</artifactId>
+				<version>0.14.1</version>
+				<configuration>
+					<oldVersion>
+						<dependency>
+							<groupId>org.acumos.license-manager</groupId>
+							<artifactId>license-manager-client-library</artifactId>
+							<version>${old.version}</version>
+							<type>jar</type>
+						</dependency>
+					</oldVersion>
+					<newVersion>
+						<file>
+							<path>${project.build.directory}/${project.artifactId}-${project.version}.${project.packaging}</path>
+						</file>
+					</newVersion>
+					<parameter>
+						<!-- see documentation -->
+					</parameter>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>cmp-report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
 		</plugins>
 	</reporting>
